--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Semantics Analyzer",
-  "description": "__MSG_description__",
+  "description": "Chrome Extension to audit meta data",
   "manifest_version": 2,
   "version": "0.1.0",
   "icons": {
@@ -16,6 +16,5 @@
   "background": {
     "scripts": ["js/background.js"]
   },
-  "default_locale": "en",
   "devtools_page": "devtools.html"
 }
